force-app/main/default/objects/PurInvVATInv__c/PurInvVATInv__c.object-meta.xml
<CustomObject>
    <label>PROC Order Line+Vat INV</label>
    <nameField>
        <displayFormat>PIV-{000000}</displayFormat>
        <label>P/I+VAT INVOICE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PROC Order Line+Vat INV</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>