force-app/main/default/objects/PurInvVATInv__c/fields/AmountOfTaxPILocalFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxPILocalFormula__c</fullName>
    <formula>PurchasingInvoiceID__r.AmountOfTaxLocal__c</formula>
    <label>AMOUNT OF TAX-P/I(LOCAL)-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>