force-app/main/default/objects/PurInvVATInv__c/fields/AmountPIInclTaxLocalForVAT__c.field-meta.xml
<CustomField>
    <fullName>AmountPIInclTaxLocalForVAT__c</fullName>
    <label>AMOUNT P/I INCL TAX(LOCAL)-FOR VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>