force-app/main/default/objects/PurInvVATInv__c/fields/PayableProcessingStatus__c.field-meta.xml
<CustomField>
    <fullName>PayableProcessingStatus__c</fullName>
    <label>PAYABLE PROCESSING STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ReceivablePayableProcessingStatus</valueSetName>
    </valueSet>
</CustomField>