force-app/main/default/objects/PurInvVATInv__c/fields/TotalAmountOfPILocalFormula__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfPILocalFormula__c</fullName>
    <formula>PurchasingInvoiceID__r.TotalAmountLocal__c</formula>
    <label>TOTAL AMOUNT OF P/I(LOCAL)-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>