force-app/main/default/objects/PurInvVATInv__c/fields/TotalAmountOfPILocalForVAT__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfPILocalForVAT__c</fullName>
    <label>TOTAL AMOUNT OF P/I(LOCAL)-FOR VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>