force-app/main/default/objects/PurInvVATInv__c/fields/TrxPlanID__c.field-meta.xml
<CustomField>
    <fullName>TrxPlanID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRX PLAN ID</label>
    <referenceTo>PaymentRequest__c</referenceTo>
    <relationshipLabel>PUR INV+VAT INV</relationshipLabel>
    <relationshipName>PurInvVAT</relationshipName>
    <type>Lookup</type>
</CustomField>