force-app/main/default/objects/PurInvVATInv__c/fields/UnpaidBalancePILocalFormula__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalancePILocalFormula__c</fullName>
    <formula>PurchasingInvoiceID__r.UnpaidBalanceLocal__c</formula>
    <label>UNPAID BALANCE P/I(LOCAL)-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>